--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "serverstart": "SET DEBUG=express-locallibrary-tutorial:* & npm run devstart"
+    "serverstart": "SET DEBUG=express-locallibrary-tutorial:* & npm run devstart",
+    "serverstart_mac": "DEBUG=express-locallibrary-tutorial:* npm run devstart"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-async-handler": "^1.2.0",
     "http-errors": "~1.6.3",
-    "mongoose": "^8.10.1",
+    "luxon": "^3.5.0",
+    "mongoose": "^8.12.1",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   },
