--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-async-handler": "^1.2.0",
+    "express-validator": "^7.2.1",
     "http-errors": "~1.6.3",
     "luxon": "^3.5.0",
     "mongoose": "^8.12.1",
